fixed vote shift tool visual bug

--- a/app/assets/stylesheets/components/vote_shift_tool.scss
+++ b/app/assets/stylesheets/components/vote_shift_tool.scss
@@ -4,11 +4,17 @@
   left: 30px;
   top: -80px;
   display: flex;
-  
+  z-index: 5;
+  .votes-view-svg {
+    position: relative;
+    z-index: 3;
+  }
+
   .vote-shift-tool-log-button {
     position: absolute;
     right: -25px;
     height: 100%;
+    z-index: 1;
     color: #a29b92;
     background-color: #fff;
     border: 1px solid #f2f1f0;
